# floor3d-toolkit

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: tutorial-en.md  tutorial-ko.md
examples/: entity-mapping.yaml.example  floor3d-card-config.yaml.example
floor3d_toolkit/: __init__.py  card_config_gen.py  cli.py  entity_mapper.py  light_extractor.py  naming.py  obj_pack.py  obj_to_glb.py  obj_writer.py  placement.py  scene_builder.py  sh3d_parser.py
scripts/: check_secrets.py
tests/: conftest.py  test_cli.py  test_module_stubs.py  test_obj_pack.py  test_pipeline.py  test_sh3d_parser.py
tests/fixtures/: README.md
