[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "floor3d-toolkit"
version = "0.0.1"
description = "Sweet Home 3D (.sh3d) to Home Assistant floor3d-card pipeline — converts floor plans into glb + entity mapping YAML."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "redchupa" },
]
keywords = ["home-assistant", "sweet-home-3d", "floor3d-card", "3d", "glb", "hacs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "lxml>=5.2.0",
    "pyyaml>=6.0.1",
    "trimesh[easy]>=4.4.0",
    "pygltflib>=1.16.2",
    "numpy>=1.26.0",
    "unidecode>=1.3.8",
    "networkx>=3.2",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/redchupa/floor3d-toolkit"
Issues = "https://github.com/redchupa/floor3d-toolkit/issues"

[project.scripts]
floor3d-toolkit = "floor3d_toolkit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["floor3d_toolkit"]

[tool.hatch.build.targets.sdist]
include = [
    "floor3d_toolkit",
    "README.md",
    "LICENSE",
    "PLAN.md",
]
exclude = [
    "tests/fixtures/*.sh3d",
    "tests/fixtures/*.glb",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# -p no:cacheprovider keeps reruns fast; -p no:pytest_homeassistant_custom_component
# avoids a globally-installed plugin that imports fcntl (Unix-only) and breaks on Windows.
addopts = "-ra --strict-markers -p no:pytest_homeassistant_custom_component"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
